--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
     "@clerk/themes": "^2.1.8",
+    "@vercel/edge-config": "^1.4.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
